--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       cache-hit: ${{ steps.cache.outputs.cache-hit }}
-      playwright-version: ${{ steps.playwright-version.outputs.version }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -31,20 +30,20 @@ jobs:
 
       - name: Cache dependencies
         id: cache
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
-          path: node_modules
-          key: v2-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            ~/.cache/ms-playwright
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
-      - name: Get Playwright version
-        id: playwright-version
-        run:
-          echo "version=$(npm list @playwright/test --depth=0 --json | jq -r
-          '.dependencies["@playwright/test"].version')" >> $GITHUB_OUTPUT
+      - name: Install Playwright browsers
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npx playwright install --with-deps
 
   linters:
     name: Linters & Code Quality
@@ -61,14 +60,16 @@ jobs:
           cache: 'npm'
 
       - name: Restore dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
-          path: node_modules
-          key: v2-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            ~/.cache/ms-playwright
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies (fallback)
         if: needs.setup.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Run ESLint
         run: npm run lint
@@ -94,14 +95,16 @@ jobs:
           cache: 'npm'
 
       - name: Restore dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
-          path: node_modules
-          key: v2-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            ~/.cache/ms-playwright
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies (fallback)
         if: needs.setup.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Run unit tests with coverage
         run: npm run test:unit
@@ -134,14 +137,16 @@ jobs:
           cache: 'npm'
 
       - name: Restore dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
-          path: node_modules
-          key: v2-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            ~/.cache/ms-playwright
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies (fallback)
         if: needs.setup.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Run integration tests
         run: npm run test:integration
@@ -161,30 +166,31 @@ jobs:
           cache: 'npm'
 
       - name: Restore dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
-          path: node_modules
-          key: v2-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            ~/.cache/ms-playwright
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies (fallback)
         if: needs.setup.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Build Next.js app
         run: npm run build
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+      - name: Cache build artifacts
+        uses: actions/cache@v3
         with:
-          name: build-files
           path: .next
-          retention-days: 1
+          key: v1-build-${{ github.sha }}
 
   system_tests:
     name: System Tests (E2E)
     runs-on: ubuntu-latest
-    needs: [build, unit_tests, integration_tests, setup]
-    timeout-minutes: 10
+    needs: [build, unit_tests, integration_tests]
+    timeout-minutes: 15
     strategy:
       fail-fast: false
       matrix:
@@ -200,77 +206,44 @@ jobs:
           cache: 'npm'
 
       - name: Restore dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
-          path: node_modules
-          key: v2-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            ~/.cache/ms-playwright
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
+      - name: Restore build artifacts
+        uses: actions/cache@v3
         with:
-          name: build-files
           path: .next
-
-      - name: Cache Playwright browsers
-        uses: actions/cache@v4
-        id: playwright-cache
-        with:
-          path: ~/.cache/ms-playwright
-          key:
-            playwright-${{ needs.setup.outputs.playwright-version }}-${{
-            runner.os }}
+          key: v1-build-${{ github.sha }}
 
       - name: Install dependencies (fallback)
         if: needs.setup.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
-      - name: Install Playwright browsers
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: npx playwright install chromium --with-deps
-
-      - name: Install system dependencies (cache hit)
-        if: steps.playwright-cache.outputs.cache-hit == 'true'
-        run: npx playwright install-deps
+      - name: Install Playwright browsers (fallback)
+        if: needs.setup.outputs.cache-hit != 'true'
+        run: npx playwright install --with-deps
 
       - name: Start Next.js app
         run: |
           npm run start &
-          echo $! > nextjs.pid
-          npx wait-on http://localhost:3000 --timeout 30000 --interval 1000
-
-      - name: Warm up application
-        run: |
-          curl -f http://localhost:3000 >/dev/null 2>&1 || true
-          sleep 2
+          npx wait-on http://localhost:3000 --timeout 60000
 
       - name: Run system tests
-        run: |
-          npm run test:e2e -- \
-            --shard=${{ matrix.shard }}/2 \
-            --workers=2 \
-            --reporter=line \
-            --project=chromium
-        env:
-          CI: true
-          NODE_ENV: production
-
-      - name: Stop Next.js app
-        if: always()
-        run: |
-          if [ -f nextjs.pid ]; then
-            kill $(cat nextjs.pid) || true
-            rm nextjs.pid
-          fi
+        run: npm run test:e2e -- --shard=${{ matrix.shard }}/2
 
       - name: Upload test artifacts on failure
         uses: actions/upload-artifact@v4
         if: failure()
         with:
-          name: e2e-results-shard-${{ matrix.shard }}
+          name: system-test-artifacts-${{ matrix.shard }}
           path: |
             test-results/
             playwright-report/
-          retention-days: 3
+          retention-days: 7
 
   security_scan:
     name: Security Scan
@@ -288,14 +261,16 @@ jobs:
           cache: 'npm'
 
       - name: Restore dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
-          path: node_modules
-          key: v2-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            ~/.cache/ms-playwright
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies (fallback)
         if: needs.setup.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Run npm audit
         run: |
@@ -320,7 +295,7 @@ jobs:
   performance_check:
     name: Performance Check
     runs-on: ubuntu-latest
-    needs: [build, setup]
+    needs: [build]
     continue-on-error: true
     steps:
       - name: Check out repository
@@ -333,20 +308,22 @@ jobs:
           cache: 'npm'
 
       - name: Restore dependencies
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
-          path: node_modules
-          key: v2-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          path: |
+            node_modules
+            ~/.cache/ms-playwright
+          key: v1-${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
 
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
+      - name: Restore build artifacts
+        uses: actions/cache@v3
         with:
-          name: build-files
           path: .next
+          key: v1-build-${{ github.sha }}
 
       - name: Install dependencies (fallback)
         if: needs.setup.outputs.cache-hit != 'true'
-        run: npm ci --prefer-offline --no-audit
+        run: npm ci
 
       - name: Bundle size analysis
         run: |
@@ -359,3 +336,42 @@ jobs:
           npm run start &
           sleep 30
           lhci autorun --config=.lighthouserc.json || echo "Lighthouse analysis completed"
+
+  deployment_check:
+    name: Deployment Check
+    runs-on: ubuntu-latest
+    needs:
+      [
+        unit_tests,
+        integration_tests,
+        system_tests,
+        security_scan,
+        performance_check
+      ]
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Check all jobs status
+        run: |
+          echo "Unit Tests: ${{ needs.unit_tests.result }}"
+          echo "Integration Tests: ${{ needs.integration_tests.result }}"
+          echo "System Tests: ${{ needs.system_tests.result }}"
+          echo "Security Scan: ${{ needs.security_scan.result }}"
+          echo "Performance Check: ${{ needs.performance_check.result }}"
+
+      - name: All checks passed
+        if: >
+          needs.unit_tests.result == 'success' && needs.integration_tests.result
+          == 'success' && needs.system_tests.result == 'success'
+        run: |
+          echo "✅ All critical CI checks passed successfully!"
+          echo "🚀 Ready for deployment"
+          echo "::notice title=CI Success::All tests and checks completed successfully"
+
+      - name: Some checks failed
+        if: >
+          needs.unit_tests.result != 'success' || needs.integration_tests.result
+          != 'success' || needs.system_tests.result != 'success'
+        run: |
+          echo "❌ Some critical tests failed"
+          echo "::error title=CI Failed::Critical tests failed - check logs"
+          exit 1
